[gd_scene load_steps=3 format=3 uid="uid://kb7g8covmh5v"]

[ext_resource type="Script" uid="uid://cwu7uen8whn7w" path="res://UI/StartMenu/start_menu.gd" id="1_0ynq1"]
[ext_resource type="Texture2D" uid="uid://dyjf6jivdbvon" path="res://Art/Backgrounds/start_menu_background_2.jpg" id="2_taruy"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ynq1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_taruy")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -15.5
offset_right = 125.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="StartButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "START"

[node name="OptionsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "OPTIONS
"

[node name="CollectionButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "COLLECTION"
